# CppCompiler

./: .gitignore  CMakeLists.txt  README.md  test2.txt  test6(bonus).txt
.github/workflows/: build.yml
gui/: code_editor.py  colors.py  main.py  out.txt  overlay.py  syntax.py
include/: headers.h
include/nodes/: Node.h
include/nodes/expressions/: AssignOpNode.h  BinaryOpNode.h  IdentifierNode.h  LiteralNode.h  UnaryOpNode.h
include/nodes/statements/: VariableDeclarationNode.h
include/symbolTable/: SymbolTable.h
include/utils/: enums.h  utils.h
src/: main.cpp
src/grammar/: lexer.l  parser.y
src/helpers/: AnalysisHelper.h  CodeGenerationHelper.h  ScopeHelper.h
src/nodes/: Node.h
src/nodes/conditions/: CaseNode.h  IfElseCondNode.h  SwitchCondNode.h
src/nodes/expressions/: AssignOpNode.h  BinaryOpNode.h  IdentifierNode.h  LiteralNode.h  UnaryOpNode.h
src/nodes/functions/: FunctionCallNode.h  FunctionDeclarationNode.h  ReturnNode.h
src/nodes/loops/: BreakNode.h  ContinueNode.h  DoWhileLoopNode.h  ForLoopNode.h  WhileLoopNode.h
src/nodes/statements/: StmtBlockNode.h  VariableDeclarationNode.h
src/symbolTable/: SymbolTable.cpp  SymbolTable.h
src/utils/: enums.h  utils.h
tests/: test.txt  test2.txt  test3.txt  test4.txt  test5(errors).txt
